syntax = "proto3";

package proto;

import "google/api/annotations.proto";

    

message JWTToken {
        
  string    user = 1; 
  string    token = 2;     
}

message JWTRequest {
        
  int64    v1 = 1; 
  string    user = 2;     
}

message JWTResponse {
        
  int64    v1 = 1; 
    JWTToken JWTToken = 2;     
}

message JWTRenewRequest {
        
  int64    v1 = 1; 
  string     jwtToken = 2;     
}

message JWTRenewResponse {
        
  int64    v1 = 1; 
    JWTToken JWTToken = 2;     
}

message JWTVerifyRequest {
        
  int64    v1 = 1; 
  string    jwtToken = 2;     
}

message JWTVerifyResponse {
        
  int64    v1 = 1; 
  string    status = 2;     
}



 

service JWTService {
   
    rpc Read(JWTVerifyRequest) returns (JWTVerifyResponse){
        option (google.api.http) = {
            get: "/jwt/verify/{jwtToken}"
         
        };
    }


}